# taskforest-protocol

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: publish-npm.yml
client/: .env.example  package-lock.json  package.json
client/src/: AgentDocs.tsx  App.css  App.tsx  Board.css  Board.tsx  Grove.css  Grove.tsx  Hire.css  Hire.tsx  Landing.css  Landing.tsx  main.tsx  pinata.ts
dark-forest/src/: index.ts
docs/: harbor-analysis.md  identity.md  spec-driven-verification.md
docs/social/: taskforest-layers.html  taskforest-x-card.html
patches/light-program-profiler/src/: lib.rs
programs/dark-forest/src/: lib.rs
programs/taskforest/: Cargo.toml
programs/taskforest-payments/: Cargo.toml
programs/taskforest-payments/src/: constants.rs  errors.rs  lib.rs
programs/taskforest-payments/src/instructions/: mod.rs  payment.rs
programs/taskforest-payments/src/state/: payment.rs
programs/taskforest/src/: constants.rs  lib.rs
programs/taskforest/src/instructions/: dispute.rs  proof.rs  settlement.rs
scripts/: deploy-devnet.sh
sdk/: README.md  package-lock.json  package.json
sdk/src/: dark-forest.ts  index.ts  spec.ts  taskforest.ts  templates.ts  types.ts
sdk/src/__tests__/: taskforest.test.ts
src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
tests/: er-devnet.ts  protocol_integration.rs  taskforest-payments.ts  taskforest.ts
